# industrial-safety-intelligence

./: .coverage.Alishas-MacBook-Air.local.54474.XkKCmCjx  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
sensor-intelligence/: .env.example  alembic.ini  pyproject.toml  requirements.txt
sensor-intelligence/alembic/: env.py
sensor-intelligence/docker/: Dockerfile  docker-compose.yml
sensor-intelligence/scripts/: generate_mock_stream.py  seed_data.py
sensor-intelligence/src/: __init__.py  main.py
sensor-intelligence/src/api/: __init__.py  dependencies.py
sensor-intelligence/src/api/middleware/: cors.py  error_handler.py  request_logging.py
sensor-intelligence/src/api/schemas/: alert_schemas.py  anomaly_schemas.py  common.py  sensor_schemas.py  threshold_schemas.py
sensor-intelligence/src/api/v1/: alerts.py  anomalies.py  health.py  readings.py  router.py  sensors.py  thresholds.py
sensor-intelligence/src/application/: __init__.py
sensor-intelligence/src/application/dto/: __init__.py  alert_dto.py  anomaly_dto.py  reading_dto.py  sensor_dto.py
sensor-intelligence/src/application/interfaces/: __init__.py  alert_repository.py  anomaly_repository.py  event_publisher.py  reading_repository.py  sensor_repository.py  threshold_repository.py
sensor-intelligence/src/domain/: __init__.py  exceptions.py
sensor-intelligence/src/domain/entities/: alert.py  anomaly.py  sensor.py  sensor_reading.py  threshold.py
sensor-intelligence/src/infrastructure/: __init__.py
sensor-intelligence/tests/: conftest.py
(+281 files in other folders)
